# notionManager

./: .gitignore  README.md  prefect.yaml  pyproject.toml  pyproject.toml.bak
assets/media/banner/: arnold_banner.avif  spotifyai.xmp
src/notionmanager/: api.py  backends.py  chatgpt_ref_code.py  chatgpt_ref_code2.py  cli.py  cloudinary_manager.py  cloudinary_manager_copy.py  config.py  cover_file_name.json  cover_file_name_merged.json  cover_images.csv  cover_images.json  cover_images_merged.json  heartbeat.py  notion.py  notion_db_pages.json  notion_db_pages_copy.json  notion_pages.pkl  notiondb_config.py  notiondb_pages.json  obsidian_config.json  supabase.py  update_covers.py  updated_notiondb_pages.json  upload_results.json  utils.py
src/notionmanager/.config/: env.example  notiondb_config.json  sync_config.json
src/notionmanager/notion/: __init__.py  api.py  manager.py  utils.py
src/notionmanager/prefect/: keep_alive_flow.py
src/notionmanager/utils/: incodeblk.py
src/notionutils/: main.py  notion.py  rmlinks.py
src/notionutils/notion/: manager.py  notion_backup.py
src/notionutils/prefect/: keep_alive_flow.py
src/notionutils/supabase/: client.py
src/notionutils/utils/: inlinecode.py
tests/: gpu_test_flow.py  hello_world_debug.py  hello_world_flow.py  prefect.yaml  test_env.py  test_gpu_flow.py
