[tool.poetry]
name = "notionutils"
version = "0.1.0"
description = ""
authors = ["Suhail <suhailece@gmail.com>"]
readme = "README.md"
packages = [{include = "notionutils", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
oauthmanager = "^0.1.1"
notion-client = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
