[tool.poetry]
name = "notionmanager"
version = "0.1.23"
description = "A Python package for managing courses, projects, and directories with Notion integration."
authors = ["Suhail <suhailece@gmail.com>"]
readme = "README.md"
packages = [{include = "notionmanager", from = "src"}]

[tool.poetry.scripts]
notionmanager = "notionmanager.cli:main"

[tool.poetry.dependencies]
python = "^3.11.7"
requests = "^2.32.3"
oauthmanager = "^0.1.1"
notion-client = "^2.2.1"
prefect = {extras = ["github"], version = "^3.1.5"}
supabase = "^2.10.0"
python-dotenv = "^1.0.1"
cloudinary = "^1.42.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
